<resources>
    <string name="app_name">Shopper</string>
    <string name="helloworld">Hello World!</string>
    <string name="app_desc">Samshopper shopping system v.4.00</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_file">privacy_policy_samfantozzi</string>
    <string name="action_settings">Settings</string>
    <string name="action_setdomain">Choose Server</string>
    <string name="action_loginout">Login / Logout</string>
    <string name="action_login">Login</string>
    <string name="action_loginadmin">Login admin</string>
    <string name="action_accountreports">Accounting reports</string>
    <string name="action_taxreports">TAX reports</string>
    <string name="action_setmonth">Set month</string>
    <string name="action_setmfir">Set my company</string>
    <string name="popisbtnpokl">Cash</string>
    <string name="popisbtnpoklsd">Cash SD</string>
    <string name="popisbtnbanka">Bank</string>
    <string name="popisbtndod1">Suppliers</string>
    <string name="popisbtnodb1">Customers</string>
    <string name="popisbtndod1k">Suppl.</string>
    <string name="popisbtnodb1k">Custom.</string>
    <string name="popisbtngen">General</string>
    <string name="addacount_title">Add account</string>
    <string name="addacount_summary">Add new Firebase Account</string>
    <string name="resetpass_summary">Reset password of FB Account</string>
    <string name="company">Company</string>
    <string name="getcompany">Get company</string>
    <string name="textok">Ok</string>
    <string name="donotlogin">You have to create email account and login.</string>
    <string name="didnotlogin">You did not login</string>
    <string name="donotcompany">You have to choose your company.</string>
    <string name="didnotcompany">You did not choose company</string>
    <string name="donotadmin">Command is allowed only for Admin user.</string>
    <string name="didnotadmin">You are not the Admin user</string>
    <string name="descimg">Desc</string>
    <string name="mixedreports">Mixed reports</string>
    <string name="nologin">You have to logout before to choose Server.</string>
    <string name="action_nologin">You have to logout.</string>
    <string name="resetpass_title">Reset password</string>
    <string name="orders">Orders</string>
    <string name="invoices">Invoices</string>
    <string name="myorders">My Orders</string>
    <string name="myordersclosed">Closed Orders</string>
    <string name="myinvoices">My Invoices</string>
    <string name="basket">Basket</string>
    <string name="reports">Reports</string>
    <string name="offer">Offer</string>
    <string name="mixed">Mixed</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Log Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Logged Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="loginfb">Login to Firebase.</string>
    <string name="outwork">You are out of work now.</string>
    <string name="atwork">You are at work now.</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="username_status_fmt">User name: %s</string>
    <string name="servername_title">Server name.</string>
    <string name="servername_summary">Server name to which you want to connect, for example www.edcom.sk, without http:\\</string>
    <string name="username_title">Mail username.</string>
    <string name="username_summary">Mail - username for login to Firebase.</string>
    <string name="userpsw_title">User password.</string>
    <string name="userpsw_summary">Password for login to Firebase.</string>
    <string name="fir_title">Number of connected company.</string>
    <string name="fir_summary">Number of connected company.</string>
    <string name="firnaz_title">Name of connected company.</string>
    <string name="firnaz_summary">Name of connected company.</string>
    <string name="mfir_title">ID of my company.</string>
    <string name="mfir_summary">ID of my company for invoices.</string>
    <string name="mfirnaz_title">Name of my company.</string>
    <string name="mfirnaz_summary">Name of my company for invoices.</string>
    <string name="firiban_title">IBAN of connected company.</string>
    <string name="firiban_summary">First IBAN of connected company.</string>
    <string name="rok_title">Accounting year.</string>
    <string name="rok_summary">Accounting year for attendance.</string>
    <string name="ume_title">Accounting month.</string>
    <string name="ume_summary">Accounting month for attendance. You can change in All Eployees Absences activity</string>
    <string name="ustype_title">Type of User.</string>
    <string name="ustype_summary">Set App by login. Admin, common user....</string>
    <string name="usuid_title">UID of User.</string>
    <string name="usuid_summary">Set App by login. UID of user....</string>
    <string name="usadmin_title">User is admin.</string>
    <string name="usadmin_summary">0=no, 1=yes</string>
    <string name="usico_title">ID Company</string>
    <string name="usico_summary">ID of choosen commpany.</string>
    <string name="usosc_title">ID number of User.</string>
    <string name="usosc_summary">ID number of User at Company where user work.</string>
    <string name="usatw_title">User at work.</string>
    <string name="usatw_summary">1-user at work, 0-user leave work.</string>
    <string name="usname_title">Name of user.</string>
    <string name="usname_summary">Name of logged user.</string>
    <string name="firduct_title">Sort of Accounting 0=double-entry accounting, 9=single-entry accounting.</string>
    <string name="firduct_summary">Set the program to connect to Fantozzi.</string>
    <string name="firdph_title">VAT payment 0=No, 1=monthly, 2=quarterly.</string>
    <string name="firdph_summary">Set the program to connect to Fantozzi.</string>
    <string name="firdph1_title">The reduced rate of VAT No.1 ( 10 % ).</string>
    <string name="firdph1_summary">Set the program to connect to Fantozzi.</string>
    <string name="firdph2_title">Basic, higher VAT rate No.2 ( 20 % ).</string>
    <string name="firdph2_summary">Set the program to connect to Fantozzi.</string>
    <string name="firrok_title">Year accounting period.</string>
    <string name="firrok_summary">Set the program to connect to Fantozzi.</string>
    <string name="doduce_title">Account of supplier.</string>
    <string name="doduce_summary">Default account of supplier invoice 32100,32101 etc.</string>
    <string name="doddok_title">Supplier document.</string>
    <string name="doddok_summary">Following document number of supplier invoice.</string>
    <string name="odbuce_title">Account of customer.</string>
    <string name="odbuce_summary">Default account of customer invoice 31100,31101 etc.</string>
    <string name="odbdok_title">Customer document.</string>
    <string name="odbdok_summary">Following document number of customer invoice.</string>
    <string name="genuce_title">Account of general docs.</string>
    <string name="genuce_summary">Default account of general docs.</string>
    <string name="gendok_title">General docs document.</string>
    <string name="gendok_summary">Following document number of general docs.</string>
    <string name="pokluce_title">Cash register account.</string>
    <string name="pokluce_summary">Default account for cash register 21100,21101 etc.</string>
    <string name="drupoh_summary">Cash register type.</string>
    <string name="drupoh_title">Default type for cash register 1=receipt, 2=expense.</string>
    <string name="pokldok_title">Receipt cash document.</string>
    <string name="pokldok_summary">The following number of receipt cash document.</string>
    <string name="pokldov_title">Expense cash document.</string>
    <string name="pokldov_summary">The following number of expense cash document.</string>
    <string name="bankuce_title">Bank account.</string>
    <string name="bankuce_summary">Default account for the bank 22100,22101 etc.</string>
    <string name="bankdok_title">Bank document.</string>
    <string name="bankdok_summary">The following number of bank document.</string>
    <string name="newdok_summary">New document.</string>
    <string name="newdok_title">0=no, 1=yes</string>
    <string name="edidok_summary">Number of edited documet, IDC, product 0=no edited item</string>
    <string name="edidok_title">Edit document, IDC, product.</string>
    <string name="storimg_summary">0=images on storage server, 1=demo resource</string>
    <string name="storimg_title">Resource for storage images.</string>
    <string name="choosecompany">Choose eShop</string>
    <string name="clickchoosecompany">Click to choose your e-shop</string>
    <string name="action_basket">Basket</string>
    <string name="action_add_tobasket">Add to Basket</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_del_favourite">Delete from Favourites</string>
    <string name="action_delete_item">Delete item</string>
    <string name="action_getdetail">Get Detail info</string>
    <string name="action_delfav">Delete from favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="offeritems">Offer items</string>
    <string name="searchhint">enter at least 3 characters</string>
    <string name="action_search">Search</string>
    <string name="offerbackdrop_title">Offer items</string>
    <string name="offerbackdrop_subtitle">Offer items subtitle</string>
    <string name="choosecat">Choose category</string>
    <string name="allcat">All categories</string>
    <string name="favitems">Favourite items</string>
    <string name="action_pay">To cash</string>
    <string name="clear_basket">Clear basket</string>
    <string name="popisIco">Company ID</string>
    <string name="popisNai">Name</string>
    <string name="save">Save</string>
    <string name="ordereid">Order eID</string>
    <string-array name="payment">
        <item>Bankový prevod</item>
        <item>Hotovosť/dobierka</item>
        <item>Platba kartou</item>
        <item>Dodací list</item>
    </string-array>
    <string name="select_payment">Select Payment</string>
    <string name="state">State of Order</string>
    <string name="select_state">Select State</string>
    <string-array name="transport">
        <item>Doprava plánovaný rozvoz</item>
        <item>Kuriér GLS</item>
        <item>Kuriér Toptrans</item>
        <item>Osobný odber</item>
    </string-array>
    <string name="select_transport">Select Transport</string>
    <string name="deliverydate">Delivery Date</string>
    <string name="imagegallery">Pick Image from Gallery</string>
    <string name="imagetoserver">Upload Image %s to Server</string>
    <string name="clearcache">Clear image cache</string>
    <string name="delete">DelKey</string>
    <string name="encrypt">1EncPri</string>
    <string name="decrypt">1DecPub</string>
    <string name="encrypt2">2EncPub</string>
    <string name="decrypt2">2DecPri</string>
    <string name="encrypt3">3SigPri</string>
    <string name="decrypt3">3VerPub</string>
    <string name="action_all">All items</string>
    <string name="action_plus">Received items</string>
    <string name="action_minus">Spend items</string>
</resources>