<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.eusecom.samfantozzi.MainFantozziActivity">
    <item
        android:id="@+id/action_setmonth"
        android:orderInCategory="100"
        android:title="@string/action_setmonth"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_idc"
        android:orderInCategory="100"
        android:title="@string/idcsandother"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setdomain"
        android:orderInCategory="100"
        android:title="@string/action_setdomain"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:iconifiedByDefault="true"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/privacy_policy"
        android:orderInCategory="100"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

</menu>
