<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StoreCardKtActivity">
    
     <item
        android:id="@+id/action_all"
        android:orderInCategory="100"
        android:title="@string/action_all"
        android:icon="@drawable/baseline_list_white_24dp"
        android:iconifiedByDefault="true"
        app:showAsAction="always"
        />

     <item
         android:id="@+id/action_plus"
         android:orderInCategory="100"
         android:title="@string/action_plus"
         android:icon="@drawable/ic_local_atm_blue_24dp"
         android:iconifiedByDefault="true"
         app:showAsAction="always"
         />

     <item
         android:id="@+id/action_minus"
         android:orderInCategory="100"
         android:title="@string/action_minus"
         android:icon="@drawable/ic_local_atm_red_24dp"
         android:iconifiedByDefault="true"
         app:showAsAction="always"
         />

</menu>
