<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.eusecom.samfantozzi.OrpListKtActivity">
    
     <item
        android:id="@+id/action_offer"
        android:orderInCategory="100"
        android:title="@string/offer"
        android:icon="@drawable/baseline_list_white_24dp"
        android:iconifiedByDefault="true"
        app:showAsAction="always"
        />

     <item
         android:id="@+id/action_pay"
         android:orderInCategory="100"
         android:title="@string/action_pay"
         android:icon="@drawable/ic_check_circle_black_24dp"
         android:iconifiedByDefault="true"
         app:showAsAction="always"
         />

     <item
         android:id="@+id/clear_basket"
         android:orderInCategory="100"
         android:title="@string/clear_basket"
         android:icon="@drawable/baseline_delete_white_24dp"
         android:iconifiedByDefault="true"
         app:showAsAction="always"
         />

</menu>
