<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="false"
        android:layout_centerInParent="true" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btnIco"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/popisIco"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_weight="1.2"/>

        <EditText android:id="@+id/inputIco"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.8"/>
    
    </LinearLayout>
    

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/popisNai"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_weight="1.2"/>

        <EditText android:id="@+id/inputNai"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.8"/>

    </LinearLayout>


    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordereid"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_weight="1.2"/>

        <EditText android:id="@+id/inputEid"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.8"/>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_weight="1.2"/>


        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/spinnPay"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:drawSelectorOnTop="true"
            android:spinnerMode="dialog"
            android:prompt="@string/select_payment">
        </Spinner>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_weight="1.2"/>


        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/spinnState"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:drawSelectorOnTop="true"
            android:spinnerMode="dialog"
            android:prompt="@string/select_state">
        </Spinner>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/transport"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_weight="1.2"/>


        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/spinnTrans"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:drawSelectorOnTop="true"
            android:spinnerMode="dialog"
            android:prompt="@string/select_transport">
        </Spinner>

    </LinearLayout>


    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button android:id="@+id/datebutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/deliverydate"/>

        <EditText
            android:id="@+id/datex"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:focusable="false"
            android:inputType="date"
            android:textColor="@color/md_black_1000"
            />



    </LinearLayout>








    <Button android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
 
</LinearLayout>

</ScrollView>