<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        app:layoutManager="GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/roomdemo_list_item" />

    <Button
        android:id="@+id/pick_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagegallery" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:background="@color/grey_100"/>

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagetoserver" />

    <Button
        android:id="@+id/clearcache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearcache" />

</LinearLayout>